<resources>
    <string name="app_name">DroiBaaSDemo</string>

    <!--  Main Activity-->
    <string name="activity_main_tab_home">首页</string>
    <string name="activity_main_tab_game">游戏</string>
    <string name="activity_main_tab_shop">应用</string>
    <string name="activity_main_tab_mine">我的</string>
    <string name="activity_main_search_hint">搜索应用</string>

    <!-- 拍照上传部分 -->
    <string name="dialog_photo_take_pic">拍照</string>
    <string name="dialog_photo_pick_pic">从手机相册选择</string>
    <string name="dialog_cancel">取消</string>

    <string name="empty">无数据</string>

    <!-- Search Activity -->
    <string name="activity_search_sort">排序</string>
    <string name="activity_search_history">历史搜索词</string>
    <string name="activity_search_clear">清除</string>
    <string name="activity_search_empty">没有搜索到</string>

    <!-- Mine Fragment -->
    <string name="fragment_mine_title">我的</string>
    <string name="fragment_mine_account_info">账号信息</string>
    <string name="fragment_mine_updating">检查更新</string>
    <string name="fragment_mine_feedback">意见反馈</string>
    <string name="fragment_mine_download">下载管理</string>
    <string name="fragment_mine_logout">退出登录</string>
    <string name="fragment_mine_login">点击头像登录</string>
    <string name="logout_success">登出成功</string>
    <string name="logout_failed">登出成功</string>

    <!-- App & Game Fragment -->
    <string name="fragment_hot_app">热门应用</string>
    <string name="fragment_hot_game">热门游戏</string>

    <!-- login & register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">请输入正确的邮箱地址</string>
    <string name="error_invalid_old_password">原密码太短</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_password_not_same">两次输入密码不相同</string>
    <string name="error_field_required">请输入邮箱地址</string>
    <string name="error_user_already_exists">用户名已存在</string>
    <string name="error_user_not_exists">该用户不存在</string>
    <string name="error_network">网络错误</string>
    <string name="login_success">登录成功</string>
    <string name="action_register">创建新账号</string>
    <string name="action_register_short">注册</string>
    <string name="login_no_account_yet">还没有账号？创建一个</string>
    <string name="login_already_a_member">已经注册？登录 </string>

    <!-- appinfo 相关-->
    <string name="app_name_text">应用名称</string>
    <string name="app_detail_text">应用详情</string>
    <string name="app_intro_text">应用介绍</string>
    <string name="app_version_info_text">版本信息</string>
    <string name="app_time_text">时间：</string>
    <string name="app_version_text">版本：</string>
    <string name="app_size_text">大小：</string>

    <!-- 下载相关 -->
    <string name="download_manager">下载管理</string>
    <string name="remove">移除</string>
    <string name="stop">停止</string>
    <string name="start">下载</string>
    <string name="install">安装</string>
    <string name="downloading">下载中</string>

    <!-- profile 相关 -->
    <string name="profile">个人信息</string>
    <string name="head_icon">头像</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="change">修改</string>
    <string name="mobile_num">手机号</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="retype_new_password">再输入</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="change_password_failed">修改密码失败</string>
    <string name="sdcard_unavailable_hint">SD卡不可用，请检查后使用！</string>
    <string name="create_avatar_failed">生成头像失败！</string>
    <string name="upload_avatar_failed">上传头像失败！</string>

    <string name="update_status_no">没有更新</string>
    <string name="update_status_yes">发现更新,正在下载</string>
    <string name="update_status_error">发生错误</string>
    <string name="update_status_timeout">请求超时</string>
    <string name="update_status_nonwifi">没有wifi连接， 只在wifi下更新</string>
    <string name="update_status_updating">已经在更新中</string>


</resources>
