<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/top_bar"
        layout="@layout/view_top_bar" />

    <RelativeLayout
        android:id="@+id/app_detail_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#D3D3D3D3" />

        <Button
            android:id="@+id/app_detail_install_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/app_install_margin_top"
            android:background="@drawable/btn_install_selector"
            android:text="@string/install"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/app_detail_bottom"
        android:layout_below="@id/top_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="@dimen/app_icon_size"
                android:layout_height="@dimen/app_icon_size"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:paddingLeft="3.0dip"
                android:paddingRight="3.0dip"
                android:singleLine="true"
                android:text="@string/app_name_text"
                android:textColor="@color/app_name_color"
                android:textSize="@dimen/app_name_text_size" />

            <RatingBar
                android:id="@+id/app_rating_bar"
                style="@style/detail_ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:id="@+id/app_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_rating_bar"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/app_detail_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="> "
                    android:textColor="@color/app_string_color"
                    android:textSize="@dimen/app_gray_text_size" />

                <TextView
                    android:id="@+id/app_detail_install_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="安装数量 "
                    android:textColor="@color/app_string_color"
                    android:textSize="@dimen/app_gray_text_size" />

                <TextView
                    android:id="@+id/app_vertical_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text=" | "
                    android:textColor="@color/app_string_color"
                    android:textSize="@dimen/app_gray_text_size" />

                <TextView
                    android:id="@+id/app_detail_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="6.0 MB"
                    android:textColor="@color/app_string_color"
                    android:textSize="@dimen/app_gray_text_size" />
            </LinearLayout>

            <ImageView
                android:id="@+id/app_detail_image"
                android:layout_width="249dp"
                android:layout_height="346dp"
                android:layout_below="@id/app_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:id="@+id/app_detail_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_detail_image"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/app_intro_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_intro_text" />

                <TextView
                    android:id="@+id/app_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/app_version_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_version_info_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/app_time_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_time_text" />

                    <TextView
                        android:id="@+id/app_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/app_version_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version_text" />

                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/app_size_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_size_text" />

                    <TextView
                        android:id="@+id/app_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6.0 MB" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>